unpackaged/main/default/objects/Opportunity/fields/AP_Contact__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AP Contacts</relationshipLabel>
    <relationshipName>AP_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>