unpackaged/main/default/objects/Opportunity/fields/AP_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Email__c</fullName>
    <formula>AP_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Contact Email</label>
    <type>Text</type>
</CustomField>