unpackaged/main/default/objects/Opportunity/fields/Assigned_Sales_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Administrator__c</fullName>
    <description>The Sales Administrator assigned to chasing the payment for this opportunity.</description>
    <inlineHelpText>The Sales Administrator assigned to chasing the payment for this opportunity.</inlineHelpText>
    <label>Assigned Sales Administrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Katharine Darbishire</fullName>
            </value>
            <value>
                <fullName>Joey Fereday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>