unpackaged/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>(C) Champion: the person(s) with power and influence inside the customer’s organization who are actively selling on your behalf and willing to give you inside information to help you win the deal</description>
    <inlineHelpText>(C) Champion: the person(s) with power and influence inside the customer’s organization who are actively selling on your behalf and willing to give you inside information to help you win the deal</inlineHelpText>
    <label>Champion</label>
    <type>TextArea</type>
</CustomField>