unpackaged/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>(C) Competition: competitive strengths, weaknesses, and differentiators, including competitor’s champions</description>
    <inlineHelpText>(C) Competition: competitive strengths, weaknesses, and differentiators, including competitor’s champions</inlineHelpText>
    <label>Competition</label>
    <type>TextArea</type>
</CustomField>