unpackaged/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>(D) Decision Process: the process and timeline by which the customer will evaluate, select, and purchase a solution</description>
    <inlineHelpText>(D) Decision Process: the process and timeline by which the customer will evaluate, select, and purchase a solution</inlineHelpText>
    <label>Decision Process</label>
    <type>TextArea</type>
</CustomField>