unpackaged/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>(E) Economic Buyer: the individual within the customer’s organization who is required for the final “yes”</description>
    <inlineHelpText>(E) Economic Buyer: the individual within the customer’s organization who is required for the final “yes”</inlineHelpText>
    <label>Economic Buyer</label>
    <type>TextArea</type>
</CustomField>