unpackaged/main/default/objects/Opportunity/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <description>The billing cycle linked to the opportunity</description>
    <inlineHelpText>Previously the &#39;Payment Expected&#39; menu</inlineHelpText>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Monthly Rolling</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Biennial</fullName>
            </value>
            <value>
                <fullName>Triennial</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
                <isActive>false</isActive>
                <label>Maybe</label>
            </value>
            <value>
                <fullName>Not_Expected</fullName>
                <isActive>false</isActive>
                <label>Not Expected</label>
            </value>
            <value>
                <fullName>Should_Be_Fine</fullName>
                <isActive>false</isActive>
                <label>Should Be Fine</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>