unpackaged/main/default/objects/Opportunity/fields/Gong__MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>Gong__MainCompetitors__c</fullName>
    <label>Main Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>