unpackaged/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>(I) Identify Pain: the problems created by the customer&#39;s current state (nobody buys until there is pain!)</description>
    <inlineHelpText>(I) Identify Pain: the problems created by the customer&#39;s current state (nobody buys until there is pain!)</inlineHelpText>
    <label>Identify Pain</label>
    <type>TextArea</type>
</CustomField>