unpackaged/main/default/objects/Opportunity/fields/LeadOwner__c.field-meta.xml
<CustomField>
    <fullName>LeadOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>