unpackaged/main/default/objects/Opportunity/fields/LicensesAssigned__c.field-meta.xml
<CustomField>
    <fullName>LicensesAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The licenses have been assigned in the admin site.</description>
    <inlineHelpText>You need to assign the licenses before moving a renewal opportunity to the Invoice Issued stage</inlineHelpText>
    <label>Licenses Assigned</label>
    <type>Checkbox</type>
</CustomField>