unpackaged/main/default/objects/Opportunity/fields/LID__Is_Influenced__c.field-meta.xml
<CustomField>
    <fullName>LID__Is_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
    <label>Is_Influenced</label>
    <type>Checkbox</type>
</CustomField>