unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No valid use case</fullName>
            </value>
            <value>
                <fullName>Legal / procurement blocked</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
            <value>
                <fullName>Features missing</fullName>
            </value>
            <value>
                <fullName>Trial solved need so no purchase</fullName>
            </value>
            <value>
                <fullName>Free tier</fullName>
            </value>
            <value>
                <fullName>Churn (UPDATE CHURN SPREADSHEET)</fullName>
            </value>
            <value>
                <fullName>Low probability. Reopen if user signs in</fullName>
            </value>
            <value>
                <fullName>Not ready yet</fullName>
            </value>
            <value>
                <fullName>Coronavirus</fullName>
            </value>
            <value>
                <fullName>Region with low propensity to purchase</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>