unpackaged/main/default/objects/Opportunity/fields/metrics__c.field-meta.xml
<CustomField>
    <fullName>metrics__c</fullName>
    <description>(M) Metrics: the economic impact of the solution</description>
    <inlineHelpText>(M) Metrics: the economic impact of the solution</inlineHelpText>
    <label>Metrics</label>
    <type>TextArea</type>
</CustomField>