unpackaged/main/default/objects/Opportunity/fields/MRR_at_renewal__c.field-meta.xml
<CustomField>
    <fullName>MRR_at_renewal__c</fullName>
    <inlineHelpText>The MRR for this opportunity before the renewal was due</inlineHelpText>
    <label>MRR at renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>