unpackaged/main/default/objects/Opportunity/fields/Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms__c</fullName>
    <label>Net Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>