unpackaged/main/default/objects/Opportunity/fields/Notify_if_logs_in__c.field-meta.xml
<CustomField>
    <fullName>Notify_if_logs_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this opportunity is marked as lost, and any user in this company logs in, then notify the opportunity owner.</description>
    <label>Notify if logs in</label>
    <type>Checkbox</type>
</CustomField>