unpackaged/main/default/objects/Opportunity/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <description>(P) Paper Process: the process by which the customer will document and execute the process of purchasing (including the MSA, order form, PO, etc.)</description>
    <inlineHelpText>(P) Paper Process: the process by which the customer will document and execute the process of purchasing (including the MSA, order form, PO, etc.)</inlineHelpText>
    <label>Paper Process</label>
    <type>TextArea</type>
</CustomField>