unpackaged/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>(P) Partner: the process of validating the partner landscape and opportunity implications</description>
    <inlineHelpText>(P) Partner: the process of validating the partner landscape and opportunity implications</inlineHelpText>
    <label>Partner</label>
    <type>TextArea</type>
</CustomField>