unpackaged/main/default/objects/Opportunity/fields/Payment_Information_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>