unpackaged/main/default/objects/Opportunity/fields/ReferringContact__c.field-meta.xml
<CustomField>
    <fullName>ReferringContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the main contact who referred this opportunity to us</inlineHelpText>
    <label>Referring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (ReferringContact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>