unpackaged/main/default/objects/Opportunity/fields/Sales_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Sales_Playbook__c</fullName>
    <defaultValue>&quot;Mid-Market&quot;</defaultValue>
    <label>Sales Playbook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Market</fullName>
                <default>true</default>
                <label>Mid-Market</label>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>