unpackaged/main/default/objects/Opportunity/fields/Seats_at_renewal__c.field-meta.xml
<CustomField>
    <fullName>Seats_at_renewal__c</fullName>
    <inlineHelpText>The number of seats the customer had before renewing</inlineHelpText>
    <label>Seats at renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>