unpackaged/main/default/objects/Opportunity/fields/Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer__c</fullName>
    <description>Add Solution Engineer to the Opportunity if one is being utilized.</description>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ryan Nebuda</fullName>
            </value>
            <value>
                <fullName>Claudia McPhail</fullName>
            </value>
            <value>
                <fullName>Toby Newman</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>