unpackaged/main/default/objects/Opportunity/fields/SPO__c.field-meta.xml
<CustomField>
    <fullName>SPO__c</fullName>
    <label>SPO%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>