unpackaged/main/default/objects/Opportunity/fields/Stakeholder_Summary__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Summary__c</fullName>
    <description>A collection of the information gathered while this opportunity was a lead</description>
    <label>SDR Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>