unpackaged/main/default/objects/Opportunity/fields/Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption__c</fullName>
    <label>Tax Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>