unpackaged/main/default/objects/Opportunity/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <inlineHelpText>The total amount to be paid by the customer. This total can be found on the customer order/invoice</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>