unpackaged/main/default/objects/Opportunity/recordTypes/Gearset_New_Opportunity_Process.recordType-meta.xml
<RecordType>
    <fullName>Gearset_New_Opportunity_Process</fullName>
    <active>true</active>
    <businessProcess>gearset_sales_process</businessProcess>
    <label>Gearset New Opportunity Process</label>
    
    
</RecordType>