unpackaged/main/default/objects/Opportunity/recordTypes/Gearset_Renewals_Process.recordType-meta.xml
<RecordType>
    <fullName>Gearset_Renewals_Process</fullName>
    <active>true</active>
    <businessProcess>gearset_renewals_process</businessProcess>
    <label>Gearset Renewals Process</label>
    
    
</RecordType>