unpackaged/main/default/objects/Opportunity/validationRules/Check_billing_cycle_for_won_non_renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_billing_cycle_for_won_non_renewal</fullName>
    <active>true</active>
    <description>The Billing Cycle field is mandatory for an opp to enter the Close/Won stage</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Won&quot;), ISPICKVAL(Expected__c, &quot;&quot;), $RecordType.DeveloperName != &quot;Gearset_Renewals_Process&quot;)</errorConditionFormula>
    <errorDisplayField>Expected__c</errorDisplayField>
    <errorMessage>The opportunity cannot enter Closed Won stage without a Billing Cycle field populated with a value</errorMessage>
</ValidationRule>