unpackaged/main/default/objects/Opportunity/validationRules/Check_Loss_Reason_If_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Loss_Reason_If_Lost</fullName>
    <active>true</active>
    <description>Lost reason must be filled in if the opportunity is marked as lost</description>
    <errorConditionFormula>ISPICKVAL(Loss_Reason__c, &#39;&#39;) &amp;&amp; ISPICKVAL(StageName, &#39;Closed Lost&#39;)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Must fill in loss reason before marking an opportunity as lost</errorMessage>
</ValidationRule>