unpackaged/main/default/objects/Opportunity/validationRules/check_payment_id_format.validationRule-meta.xml
<ValidationRule>
    <fullName>check_payment_id_format</fullName>
    <active>true</active>
    <description>To ensure that the Payment field has a valid Docusign envelope ID or a Fastspring ID</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(Payment__c),
OR(
REGEX( Payment__c ,"^(?:GEA|SQL)[0-9]+-[0-9]+-[0-9]+$"),
REGEX( Payment__c ,"^[0-9a-fA-F]{8}+-[0-9a-fA-F]{4}+-[0-9a-fA-F]{4}+-[0-9a-fA-F]{4}+-[0-9a-fA-F]{12}$")
)
)
)</errorConditionFormula>
    <errorDisplayField>Payment__c</errorDisplayField>
    <errorMessage>Check that your Payment field is a valid Docusign envelope ID or a Fastspring ID. Note: Fastspring IDs do not have S at the end.</errorMessage>
</ValidationRule>