unpackaged/main/default/objects/Opportunity/validationRules/check_payment_when_close.validationRule-meta.xml
<ValidationRule>
    <fullName>check_payment_when_close</fullName>
    <active>true</active>
    <description>The Payment field is mandatory for an opp to enter the Close/Won stage</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Won&quot;), ISBLANK( Payment__c ))</errorConditionFormula>
    <errorDisplayField>Payment__c</errorDisplayField>
    <errorMessage>The opportunity cannot enter Closed Won stage without a Payment field populated with a DocuSign envelope ID or the FastSpring ID</errorMessage>
</ValidationRule>