unpackaged/main/default/objects/Opportunity/validationRules/Must_have_team_id_for_won_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_team_id_for_won_opp</fullName>
    <active>true</active>
    <description>Won opportunities must set a team on the associated account</description>
    <errorConditionFormula>AND(
  ISNULL(Account.Gearset_Team__c),
  ISPICKVAL(StageName, &quot;Closed Won&quot;)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You must set the Gearset team on the account before you can mark the opportunity as won</errorMessage>
</ValidationRule>