unpackaged/main/default/objects/Opportunity/validationRules/Must_not_be_joining_team.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_not_be_joining_team</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LeadSource, &quot;Joining team&quot;)</errorConditionFormula>
    <errorMessage>Opportunities must never have the Lead Source &quot;Joining team&quot;</errorMessage>
</ValidationRule>