unpackaged/main/default/objects/Opportunity/validationRules/Must_set_lead_source_for_non_renewal_ops.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_set_lead_source_for_non_renewal_ops</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LeadSource, "")
&amp;&amp;
$RecordType.DeveloperName != 'Gearset_Renewals_Process'</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Set Lead Source before progressing Opportunity</errorMessage>
</ValidationRule>