unpackaged/main/default/objects/Opportunity/validationRules/Not_Closed_Won_if_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Closed_Won_if_Prospect</fullName>
    <active>true</active>
    <description>You can&#39;t set an Opp to Closed Won on Account Type &#39;Prospect - Standard Customer&#39; or &#39;Prospect - Implementation Partner&#39;</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Account.Type , &#39;Prospect - Standard Customer&#39;),
ISPICKVAL(Account.Type , &#39;Prospect - Implementation Partner&#39;)) ,
ISPICKVAL(StageName, &#39;Closed Won&#39;)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can&#39;t set an Opp to &#39;Closed Won&#39; if Account Type is &#39;Prospect - Standard Customer&#39; or &#39;Prospect - Implementation Partner&#39;</errorMessage>
</ValidationRule>