unpackaged/main/default/objects/Opportunity/validationRules/Required_fields_before_starting_renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_before_starting_renewal</fullName>
    <active>true</active>
    <description>There are a bunch of fields that must be filled in manually (at least for now). Force these to be set before you can progress a renewal.</description>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = 'Gearset_Renewals_Process',
    NOT(ISPICKVAL(StageName, 'Approaching Renewal')),
    OR(
        ISBLANK(Renewal_Date__c),
        ISBLANK(Seats_at_renewal__c),
        ISBLANK(MRR_at_renewal__c)
    ),
    CreatedDate &gt;=  DATETIMEVALUE("2020-11-06 00:00:00Z")
)</errorConditionFormula>
    <errorMessage>Must set renewal date, seats at renewal and mrr at renewal before you can progress this opportunity</errorMessage>
</ValidationRule>